test_suite/syntax_test_cases/reservedWords3.ast
-- Test: reservedWords3.wacc

-- Uploaded file: 
---------------------------------------------------------------
# reserved keywords

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  bool false = true
end
---------------------------------------------------------------

-- Compiler Output:
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:7 -- no viable alternative at input 'boolfalse'
1 parser error(s) detected, no further compilation attempted.

